2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* AUTHORS: Updated.

2006-06-13  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* AUTHORS: Updated.

2005-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* NEWS: Added 0.14.1 informaiton.

2005-10-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* NEWS: Added 0.14.0 information.
	* README: Revised.
	* COPYING.LIB: Added.

2005-10-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* AUTHORS: Updated.

2005-03-09  Kouhei Sutou  <kou@cozmixng.org>

	* README: fixed dependencies.

2005-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, NEWS, AUTHORS: Updated.

2005-02-24  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: added dummy $makefile_created = true for mkmf.rb in
	  ruby 1.9.

2005-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, exec_make.rb: Support MSVC++(nmake).

2004-11-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, NEWS: Updated.

2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* AUTHORS: Modified.

2004-10-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Added Ruby/GnomePrint
	* AUTHORS: Updated.

2004-08-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, NEWS: Revised.
	* extconf.rb, exec_make.rb: Add --strict option. 
	If you don't give this option, it doesn't exit with 1
	(exit(1)) because it doesn't mean failure of compilation
	and instalation of almost of all libraries.

2004-08-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* NEWS: Updated.

2004-08-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.

2004-03-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Updated dependencies for Ruby/Libgda.
	* NEWS: Updated.

2004-03-14  Dafydd Harries <daf@muse.19inch.net>

	* exec_make.rb: exit with 1 when failure occurred.

2004-03-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* NEWS: Updated.
	* extconf.rb: Remove debug code.

2004-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Add atk as prior library.
	* README: Update Copyright.

2004-03-03  Masao Mutoh  <mutoh@highway.ne.jp>
