@@ -1,3 +1,7 @@
+2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* extconf.rb: Work MinGW again.
+
 2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* AUTHORS: Updated.
